# localnow

./: LICENSE  README.md  pyproject.toml
localnow/: __init__.py  localnow.py
tests/: test_localnow.py
